--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,11 @@ import Navbar from "../components/Navbar.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>Paul Sanders Music</title>
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="d19d4b1d-104e-458b-a895-77c4cd468f34"
+    ></script>
   </head>
   <body>
     <Navbar />
