--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,21 +1,40 @@
-<footer class="footer footer-center footer-horizontal bg-neutral text-neutral-content p-10 mt-4">
-  <a
-    href="https://facebook.com/paulsandersmusic"
-    target="_blank"
-    rel="noopener noreferrer"
-    class="text-gray-200 hover:text-gray-400 transition-colors duration-300 text-2xl sm:text-3xl md:text-4xl hover:animate-wiggle"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="32"
-      height="32"
-      viewBox="0 0 512 512"
-    >
-      <path
-        fill="currentColor"
-        d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256c0 120 82.7 220.8 194.2 248.5V334.2h-52.8V256h52.8v-33.7c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287v175.9C413.8 494.8 512 386.9 512 256"
-      />
-    </svg>
-  </a>
-  <p class="mt-4">&copy; 2025 Paul Sanders</p>
+<footer class="footer footer-center bg-neutral text-neutral-content p-10 mt-4">
+  <div class="flex flex-col">
+    <div class="flex space-x-4">
+      <a
+        href="https://facebook.com/paulsandersmusic"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="text-gray-200 hover:text-gray-400 transition-colors duration-300 text-2xl sm:text-3xl md:text-4xl hover:animate-wiggle"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 512 512"
+        >
+          <path
+            fill="currentColor"
+            d="M512 256C512 114.6 397.4 0 256 0S0 114.6 0 256c0 120 82.7 220.8 194.2 248.5V334.2h-52.8V256h52.8v-33.7c0-87.1 39.4-127.5 125-127.5c16.2 0 44.2 3.2 55.7 6.4V172c-6-.6-16.5-1-29.6-1c-42 0-58.2 15.9-58.2 57.2V256h83.6l-14.4 78.2H287v175.9C413.8 494.8 512 386.9 512 256"
+          />
+        </svg>
+      </a>
+      <a
+        href="https://www.youtube.com/@PaulSandersMusic"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="text-gray-200 hover:text-gray-400 transition-colors duration-300 text-2xl sm:text-3xl md:text-4xl hover:animate-wiggle"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 448 512">
+          <path
+            fill="currentColor" 
+            d="m282 256.2l-95.2-54.1v108.2zM384 32H64C28.7 32 0 60.7 0 96v320c0 35.3 28.7 64 64 64h320c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64m14.4 136.1c7.6 28.6 7.6 88.2 7.6 88.2s0 59.6-7.6 88.1c-4.2 15.8-16.5 27.7-32.2 31.9C337.9 384 224 384 224 384s-113.9 0-142.2-7.6c-15.7-4.2-28-16.1-32.2-31.9c-7.6-28.6-7.6-88.2-7.6-88.2s0-59.7 7.6-88.2c4.2-15.8 16.5-28.2 32.2-32.4C110.1 128 224 128 224 128s113.9 0 142.2 7.7c15.7 4.2 28 16.6 32.2 32.4"
+          />
+        </svg>
+      </a>
+    </div>
+    <div class="flex mt-2">
+      &copy; 2025 Paul Sanders
+    </div>
+  </div>
 </footer>
