Embed youtube video

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -12,5 +12,17 @@
       ages entertained.
     </p>
     <h2 id="videos">Videos</h2>
+    <div class="flex justify-center mt-4">
+      <iframe
+        width="315"
+        height="560"
+        src="https://www.youtube.com/embed/gXbtizFVIak"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+      >
+      </iframe>
+    </div>
   </main>
 </div>
