--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100 shadow-sm fixed top-0 z-50">
+<nav class="navbar bg-base-100 shadow-sm fixed top-0 z-50">
   <div class="navbar-start">
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -31,4 +31,4 @@
       <li><a href="#videos">Videos</a></li>
     </ul>
   </div>
-</div>
+</nav>
