--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,3 +1,7 @@
+---
+import ContactForm from "../components/ContactForm.astro";
+---
+
 <div id="container" class="container mx-auto flex justify-center text-center items-center mt-5">
   <main>
     <h1 id="home">
@@ -23,6 +27,10 @@
         allowfullscreen
       >
       </iframe>
+    </div>
+    <h2 id="contact">Contact</h2>
+    <div class="justify-center mt-4">
+      <ContactForm />
     </div>
   </main>
 </div>
