--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 <nav class="navbar bg-base-100 shadow-sm fixed top-0 z-50">
-  <div class="navbar-start">
+  <div class="navbar-start flex-1">
     <div class="dropdown">
       <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
         <svg
