--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -11,6 +11,9 @@ import ContactForm from "../components/ContactForm.astro";
       <img src="img/paul.jpg" alt="Paul Sanders" class="mx-auto" />
     </div>
     <h2 id="about">About</h2>
+    <div class="mt-4 mb-4 mx-auto">
+      <img src="img/paul2.jpg" alt="Paul Sanders" class="mx-auto" />
+    </div>
     <p>
       Paul Sanders is a solo acoustic performer with a verity of songs to keep audiences of all
       ages entertained.
