--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="footer footer-center bg-neutral text-neutral-content p-10 mt-4">
+<footer class="footer footer-center bg-base-300 p-10 mt-4">
   <div class="flex flex-col">
     <div class="flex space-x-4">
       <a
