Update contact form

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -31,7 +31,7 @@ import ContactForm from "../components/ContactForm.astro";
       >
       </iframe>
     </div>
-    <h2 id="contact">Contact</h2>
+    <h2 id="contact">Contact and Booking</h2>
     <div class="justify-center mt-4">
       <ContactForm />
     </div>
