--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -8,20 +8,20 @@
     <input
       type="text"
       class="input input-primary w-full"
-      placeholder="Name"
+      placeholder="Name *"
       name="name"
       required
     />
     <input
       type="email"
       class="input input-primary w-full"
-      placeholder="Email Address"
+      placeholder="Email Address *"
       name="email"
       required
     />
     <textarea
       class="textarea textarea-primary w-full"
-      placeholder="Your Message"
+      placeholder="Your Message *"
       name="message"
       required
     ></textarea>
