--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
     <main>
       <h1 class="flex justify-center mt-4">Contact and Booking</h1>
       <div class="mt-4 mb-4 mx-auto">
-        <img src="img/paul2.jpg" alt="Paul Sanders" class="mx-auto" />
+        <img src="/img/paul2.jpg" alt="Paul Sanders" class="mx-auto" />
       </div>
       <div class="justify-center mt-4">
         <ContactForm />
