--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,7 +5,11 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
   <div class="container mx-auto flex justify-center text-center items-center mt-5">
-    404
-    File not found
+    <main>
+      <h1 class="flex justify-center mt-4">404</h1>
+      <div class="flex justify-center mt-4">
+        Page not found
+      </div>
+    </main>
   </div>
 </Layout>
