--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,14 +1,19 @@
+---
+import Shows from "../components/Shows.astro";
+---
+
 <div id="container" class="container mx-auto flex justify-center text-center items-center mt-5">
   <main>
     <h1 id="home">
       Paul Sanders Music
     </h1>
-    <div class="mt-4 mb-4 mx-auto">
+    <div class="mb-4 mx-auto">
       <img src="img/paul.jpg" alt="Paul Sanders" class="mx-auto" />
     </div>
     <p>
       Paul Sanders is a solo acoustic performer with a verity of songs to keep audiences of all
       ages entertained.
     </p>
+    <Shows />
   </main>
 </div>
