--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,9 +4,13 @@
 }
 
 h1 {
-  @apply text-3xl font-bold text-primary pt-16;
+  @apply text-3xl font-bold text-primary pt-16 mb-4;
 }
 
 h2 {
-  @apply text-2xl font-bold text-primary pt-14;
+  @apply text-2xl font-bold text-primary pt-14 mb-4;
+}
+
+.link {
+  @apply text-accent hover:text-primary;
 }
