--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -20,7 +20,7 @@
         tabindex="0"
         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
         <li><a href="/videos">Videos</a></li>
-        <li><a href="/contact">Contact</a></li>
+        <li><a href="/contact">Contact/Booking</a></li>
       </ul>
     </div>
     <a class="btn btn-ghost text-xl" href="/">Paul Sanders Music</a>
@@ -28,7 +28,7 @@
   <div class="navbar-center hidden lg:flex">
     <ul class="menu menu-horizontal px-1">
       <li><a href="/videos">Videos</a></li>
-      <li><a href="/contact">Contact</a></li>
+      <li><a href="/contact">Contact/Booking</a></li>
     </ul>
   </div>
 </nav>
