--- a/src/components/Shows.astro
+++ b/src/components/Shows.astro
@@ -3,7 +3,12 @@
   <ul class="list bg-base-100 rounded-box shadow-md">
     <li class="list-row">
       <div>
-        April 11 @ <a class="link" href="https://www.facebook.com/KrakenBarChapelHill">The Kraken</a> - Full band show with <a class="link" href="https://www.facebook.com/planetplutoband">Planet Pluto</a>
+        April 6 - 5pm @ <a class="link" href="https://www.facebook.com/VillageBev">Village Beverage</a>
+      </div>
+    </li>
+    <li class="list-row">
+      <div>
+        April 11 - 8pm @ <a class="link" href="https://www.facebook.com/KrakenBarChapelHill">The Kraken</a> - Full band show with <a class="link" href="https://www.facebook.com/planetplutoband">Planet Pluto</a>
       </div>
     </li>
   </ul>
