--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -11,7 +11,7 @@ import Shows from "../components/Shows.astro";
       <img src="img/paul.jpg" alt="Paul Sanders" class="mx-auto" />
     </div>
     <p>
-      Paul Sanders is a solo acoustic performer with a verity of songs to keep audiences of all
+      Paul Sanders is a solo acoustic performer with a varity of songs to keep audiences of all
       ages entertained.
     </p>
     <Shows />
