Add village beverage video

--- a/src/pages/videos.astro
+++ b/src/pages/videos.astro
@@ -9,10 +9,22 @@ import Layout from "../layouts/Layout.astro";
       <h1 class="flex justify-center mt-4">Videos</h1>
       <div class="flex justify-center mt-4">
         <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/FeM78KWgPzg?si=KXgooN2pO1WSSBId"
+          title="Pine Knolls Pub 6-Apr-2025"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen>
+        </iframe>
+      </div>
+      <div class="flex justify-center mt-4">
+        <iframe
           width="315"
           height="560"
           src="https://www.youtube.com/embed/gXbtizFVIak"
-          title="YouTube video player"
+          title="Pine Knolls Pub 16-Aug-2024"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
