--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,5 +1,5 @@
 ---
-import Shows from "../components/Shows.astro";
+// import Shows from "../components/Shows.astro";
 ---
 
 <div id="container" class="container mx-auto flex justify-center text-center items-center mt-5">
@@ -14,6 +14,6 @@ import Shows from "../components/Shows.astro";
       Paul Sanders is a solo acoustic performer with a varity of songs to keep audiences of all
       ages entertained.
     </p>
-    <Shows />
+    <!-- <Shows /> -->
   </main>
 </div>
