--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -15,6 +15,11 @@ import Tips from "../components/Tips.astro";
       Paul Sanders is a solo acoustic performer with a varity of songs to keep audiences of all
       ages entertained.
     </p>
+    <p>
+      In addtion to his solo music he is also a member of the band
+      <a href="https://planetpluto.band" class="link">Planet Pluto</a> where he sings lead and
+      backing vocals and plays lead guitar.
+    </p>
     <div class="mt-4">
       <Tips />
     </div>
