--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -1,5 +1,5 @@
 ---
-import Shows from "../components/Shows.astro";
+// import Shows from "../components/Shows.astro";
 import Tips from "../components/Tips.astro";
 ---
 
@@ -23,6 +23,6 @@ import Tips from "../components/Tips.astro";
     <div class="mt-4">
       <Tips />
     </div>
-    <Shows />
+    <!-- <Shows /> -->
   </main>
 </div>
