--- a/src/components/Images.astro
+++ b/src/components/Images.astro
@@ -1,19 +1,21 @@
 ---
 const images = [
-  { src: "/img/village_beverage_18_jul_2025/signal-2025-07-19-071550_005.jpeg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_18_jul_2025/signal-2025-07-19-071550_006.jpeg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_18_jul_2025/signal-2025-07-19-071550_002.jpeg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_18_jul_2025/signal-2025-07-19-071550_003.jpeg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_6_apr_2025/PXL_20250406_212243257.jpg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_6_apr_2025/PXL_20250406_212257125.jpg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_6_apr_2025/PXL_20250406_212301426.jpg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_6_apr_2025/PXL_20250406_212308041.jpg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_6_apr_2025/PXL_20250406_212317469.jpg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_6_apr_2025/PXL_20250406_215301265.jpg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_6_apr_2025/PXL_20250406_215319926.jpg", caption: "Village Beverage" },
-  { src: "/img/village_beverage_6_apr_2025/PXL_20250406_233557613.jpg", caption: "Village Beverage" },
-  { src: "/img/pine_knolls_16_aug_2024/PXL_20240816_231556893.jpg", caption: "Pine Knolls Pub" },
-  { src: "/img/pine_knolls_16_aug_2024/PXL_20240816_231607913.jpg", caption: "Pine Knolls Pub" },
+  { src: "/img/fluid-9-aug-2025/fluid-1.jpeg", caption: "FLUID Coffee Roasters" },
+  { src: "/img/fluid-9-aug-2025/fluid-2.jpeg", caption: "FLUID Coffee Roasters" },
+  { src: "/img/village-beverage-18-jul-2025/signal-2025-07-19-071550_005.jpeg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-18-jul-2025/signal-2025-07-19-071550_006.jpeg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-18-jul-2025/signal-2025-07-19-071550_002.jpeg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-18-jul-2025/signal-2025-07-19-071550_003.jpeg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-6-apr-2025/PXL_20250406_212243257.jpg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-6-apr-2025/PXL_20250406_212257125.jpg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-6-apr-2025/PXL_20250406_212301426.jpg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-6-apr-2025/PXL_20250406_212308041.jpg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-6-apr-2025/PXL_20250406_212317469.jpg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-6-apr-2025/PXL_20250406_215301265.jpg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-6-apr-2025/PXL_20250406_215319926.jpg", caption: "Village Beverage" },
+  { src: "/img/village-beverage-6-apr-2025/PXL_20250406_233557613.jpg", caption: "Village Beverage" },
+  { src: "/img/pine-knolls-16-aug-2024/PXL_20240816_231556893.jpg", caption: "Pine Knolls Pub" },
+  { src: "/img/pine-knolls-16-aug-2024/PXL_20240816_231607913.jpg", caption: "Pine Knolls Pub" },
 ];
 ---
 
