--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -12,11 +12,11 @@ import Tips from "../components/Tips.astro";
       <img src="img/paul.jpg" alt="Paul Sanders" class="mx-auto" />
     </div>
     <p>
-      Paul Sanders is a solo acoustic performer with a varity of songs to keep audiences of all
+      Paul Sanders is a solo acoustic performer with a variety of songs to keep audiences of all
       ages entertained.
     </p>
     <p>
-      In addtion to his solo music he is also a member of the band
+      In addition to his solo music he is also a member of the band
       <a href="https://planetpluto.band" class="link">Planet Pluto</a> where he sings lead and
       backing vocals and plays lead guitar.
     </p>
