--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import ContactForm from "../components/ContactForm.astro";
+// import ContactForm from "../components/ContactForm.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
@@ -12,7 +12,7 @@ import Layout from "../layouts/Layout.astro";
         <img src="/img/paul2.jpg" alt="Paul Sanders" class="mx-auto" />
       </div>
       <div class="justify-center mt-4">
-        <ContactForm />
+        For inquiries and booking contact <a href="mailto:paul@paulsandersmusic.com" class="link">paul@paulsandersmusic.com</a>
       </div>
     </main>
   </div>
